# dattri

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  batch_metadata.json  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.py  ssh_config_template.txt
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: algorithm.doctree  benchmark.doctree  dropout.doctree  fisher.doctree  helper.doctree  hessian.doctree  hvp_ihvp.doctree  params.doctree  projection.doctree  random_projection.doctree  task.doctree
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: darglint.yml  doc.yml  examples_test.yml  gpu-test-on-comment.yml  lint.yml  pull_request_template.md  pycodestyle.yml  pydocstyle.yml  pylint.yml  pytest.yml
_sources/: index.rst.txt
_sources/api/: algorithm.rst.txt  benchmark.rst.txt
api/: algorithm.html  benchmark.html  dropout.html  fisher.html  helper.html  hessian.html  hvp_ihvp.html  params.html  projection.html  random_projection.html  task.html
branch-0.2/: .buildinfo  py-modindex.html
branch-0.2/.doctrees/: environment.pickle  index.doctree
branch-0.2/.doctrees/api/: algorithm.doctree  benchmark.doctree  fisher.doctree  projection.doctree
branch-0.2/_sources/api/: algorithm.rst.txt  hessian.rst.txt  projection.rst.txt
branch-0.2/api/: dropout.html  fisher.html  hessian.html  projection.html
branch-0.3/: index.html  objects.inv  py-modindex.html  search.html
branch-0.3/.doctrees/: environment.pickle
branch-0.3/.doctrees/api/: benchmark.doctree  fisher.doctree
branch-0.3/_sources/api/: fisher.rst.txt  projection.rst.txt
branch-0.3/api/: fisher.html  hessian.html
ckpts_dict_input/: model_1.pt  model_2.pt
dattri/: .gitignore  __init__.py  task.py
dattri/LoGra_utils/core/: __init__.py  metadata.py
dattri/LoGra_utils/offload/: __init__.py  cpu.py  memory.py
dattri/LoGra_utils/utils/: __init__.py  projector.py
dattri/algorithm/: LoGra.py  __init__.py  base.py  data_shapley.py  dvemb.py  factgrass.py  influence_function.py  logra.py  rps.py  tracin.py  trak.py  utils.py
dattri/algorithm/LoGra_utils/: __init__.py
dattri/algorithm/block_projected_if/: __init__.py  block_projected_if.py
dattri/algorithm/logra/: __init__.py  logra.py
dattri/algorithm/logra_utils/: __init__.py
dattri/benchmark/: __init__.py  imagenet.py  load.py  maestro.py  mnist.py  retrain_nanogpt.py  shakespeare.py  tinystories.py  utils.py
dattri/benchmark/datasets/: __init__.py  utils.py
dattri/benchmark/imagenet/: data.py
dattri/benchmark/maestro/: __init__.py  train.py
dattri/benchmark/mnist/: __init__.py  mnist_lr.py
dattri/benchmark/models/: __init__.py
dattri/datasets/: __init__.py  mnist.py  utils.py
dattri/experiments/: cifar2_resnet9_benchmark.py
dattri/func/: __init__.py  fisher.py  hessian.py  ihvp.py  projection.py  random_projection.py  utils.py
dattri/metric/: __init__.py  ground_truth.py  metrics.py
dattri/metrics/: __init__.py  britteness.py  ground_truth.py  groundtruth.py  metrics.py
dattri/model_util/: __init__.py  retrain.py
dattri/model_utils/: __init__.py  dropout.py  ensemble.py  hook.py  retrain.py  tfidf_sampler.py  utils.py
dattri/params/: __init__.py  projection.py
dattri/script/: dattri_retrain.py  dattri_retrain_nanogpt.py
dattri/scripts/: __init__.py  cifar2_resnet9_benchmark.py  dattr_retrain_nanogpt.py  dattri_retrain.py  dattri_retrain_nanogpt.py  mnist_lr_benchmark.py  retrain.py  test_maestro.py  test_retrain.py
docs/: README.md  conf.py  index.rst
docs/guide/: README.md  data_compatibility.md
docs/source/: conf.py  index.rst
docs/source/api/: algorithm.rst  benchmark.rst  dropout.rst  fisher.rst  helper.rst  hvp_ihvp.rst  params.rst  random_projection.rst  task.rst
example/cifar2_resnet9/: influence_function_noisy_label.py  rps_dataset_debugging.py  rps_noisby_label.py  tracin_noisy_label.py
example/mnist_lr/: influence_function.py  influence_function_lds.py  influence_function_noisy_label.py  mnist_lr_brittleness.py  rps_dataset_debugging.py  tracin_noisy_label.py  trak_noisy_label.py
examples/: README.md  readme.md
examples/brittleness/: mnist_lr_brittleness.py
examples/customized_retraining/: mnist.py
examples/data_cleaning/: influence_function_data_cleaning.py  tracin_dataloader_group.py
examples/data_selection/: influence_function_data_selection.py
examples/dvemb/: _groundtruth_loo_mlp.py  dvemb_mlp.py  groundtruth_loo_mlp.py  run_dvemb_mlp.sh
examples/lds_vs_gt/: mnist.py
examples/noisy_label_detection/: influence_function_noisy_label.py  tracin_noisy_label.py  trak_noisy_label.py
examples/pretrained_benchmark/: influence_function_lds.py  logra_lds.py  logra_mnist_mlp_lds.py  logra_wikitext2_gpt2_lds.py  logra_wikitext_gpt2_lds.py  trak_dropout_lds.py  trak_lds.py  trak_loo.py
examples/quickstart/: influence_function_lds.ipynb  influence_function_noisy_label.ipynb
examples/relatIF/: influence_function_comparison.py
experiments/: README.md  benchmark_result.py  benchmark_result_mt.py  benchmark_result_nanogpt.py  mnist_lr_benchmark.py  mnist_lr_brittleness.py  readme.md
experiments/gpt2_wikitext/: README.md  cuda_version.py  groundtruth.py  readme.md  requirement.txt  requirements.txt  score.py  score_IF.py  score_IF_dict.py  score_LoGra.py  score_TRAK.py  score_TRAK_dict.py  score_TRAK_slurm.sh  score_logra.py  score_logra_slurm.sh  spearman.py  train.py
mlp_gt/: selected_train_indices.txt
quickstart/: influence_function_lds.ipynb  influence_function_noisy_label.ipynb
sleepymalc-patch-1/: .buildinfo  genindex.html  index.html  objects.inv  search.html
sleepymalc-patch-1/.doctrees/: environment.pickle  index.doctree
sleepymalc-patch-1/.doctrees/api/: dropout.doctree  task.doctree
sleepymalc-patch-1/api/: algorithm.html  hessian.html  projection.html  task.html
test/dattri/: test_task.py
v0.2.0/.doctrees/: environment.pickle
v0.3.0/.doctrees/: environment.pickle
v0.3.0/api/: algorithm.html
(+242 files in other folders)
