[project]
name = "dattri"
requires-python = ">=3.8"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN101", "ANN002", "D203", "D213", "D407", "PLR0913", "UP", "TD002", "TD003", "FIX002"]  
# ignores: ANN101 (strict rule on .self type annotation), ANN002 (unnecessarily strict rule), D203 (conflict with D211), D213 (conflict with D212), D407 (supporting Google style docstrings), PLR0913 (strict rule on #args in function), UP (compatibility with Python 3.8)
# ignores: TD002 (Missing author in TODO), TD003 (Missing issue link), FIX002 (TODO needs to be fixed)


[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["E401", "E402"]
"setup.py" = ["ANN"]
"**/test/**/*.py" = ["S101", "INP001", "ANN"] # ignores: S101 (assert is fine in tests), INP001 (no need for __init__.py in test), ANN (don't need type annotation for tests)

[tool.ruff.lint.pydocstyle]
convention = "google"
